Ensured notifications are visible on tiny devices.

--- a/Shared/wwwroot/css/site.css
+++ b/Shared/wwwroot/css/site.css
@@ -90,3 +90,9 @@ body {
     background-color: #a207a2;
     border-color: #a207a2;
 }
+
+@media screen and (max-width: 576px) {
+    [data-notify="container"] {
+        max-width: 70%;
+    }
+}
